--- a/synth.css
+++ b/synth.css
@@ -169,6 +169,35 @@ input[type="range"]::-webkit-slider-thumb {
   background: #555;
 }
 
+.filter-canvas {
+  display: block;
+  width: 100%;
+  border-radius: 6px;
+  cursor: default;
+}
+
+.filter-values {
+  display: flex;
+  justify-content: space-around;
+  font-size: 0.65rem;
+  color: #667;
+  letter-spacing: 1px;
+  font-family: monospace;
+}
+
+.filter-values span {
+  color: #889;
+}
+
+.filter-values .filter-label {
+  color: #e94560;
+  font-weight: bold;
+}
+
+.filter-section .controls {
+  margin-bottom: 4px;
+}
+
 .adsr-canvas {
   display: block;
   width: 100%;
